[package]
name = "test-rust-esp-template"
version = "0.1.0"
authors = ["d.schiavano <dario.schiavano@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "test-rust-esp-template"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
warp = "0.3" # Warp is a fast, efficient, and secure web server written in Rust.
tokio = { version = "1.40.0", features = ["full"] } # Tokio is an asynchronous runtime for the Rust programming language.

esp-hal = { version = "0.20.1", features = [ "esp32" ] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

[build-dependencies]
embuild = "0.32.0"
# [dependencies]
# esp-backtrace = { version = "0.14.0", features = [
#     "esp32",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }
# warp = "0.3" # Warp is a fast, efficient, and secure web server written in Rust.
# tokio = { version = "1.40.0", features = ["full"] } # Tokio is an asynchronous runtime for the Rust programming language.

# esp-hal = { version = "0.20.1", features = [ "esp32" ] }
# esp-println = { version = "0.11.0", features = ["esp32", "log"] }
# log = { version = "0.4.21" }
# esp-alloc = { version = "0.4.0" }
# embedded-io = "0.6.1"
# esp-wifi = { version = "0.8.0", features = [
#     "esp32",
#     "phy-enable-usb",
#     "utils",
#     "wifi",
# ] }
# heapless = { version = "0.8.0", default-features = false }
# smoltcp = { version = "0.11.0", default-features = false, features = [
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "proto-igmp",
#     "proto-ipv4",
#     "socket-dhcpv4",
#     "socket-icmp",
#     "socket-raw",
#     "socket-tcp",
#     "socket-udp",
# ] }
# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units = 1 # LLVM can perform better optimizations using a single thread
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# opt-level = 's'
# overflow-checks = false
